--- a/org-ex.html
+++ b/org-ex.html
@@ -11,7 +11,7 @@
   <!-- ===== BOX ICONS ===== -->
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-  <title>Personal portfolio | Salsa</title>
+  <title>Pengalaman Org | Salsa</title>
 </head>
 
 <body>
