--- a/education.html
+++ b/education.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-    <title>Document</title>
+    <title>Education | Salsa</title>
     <link rel="stylesheet" href="style.css">
-    <title>Dark Mode</title>
 
 </head>
 <body>
