--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-    <title>Prtfolio | Salsa</title>
+    <title>Portfolio | Salsa</title>
     <link rel="stylesheet" href="style.css">
     
 
